--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="accordion"><h1>Basic Commands</h1></div>
 			<div class="panel">
 				<ol>
-					<li></li>
+					<li>config</li>
 					<li></li>
 					<li></li>
 					<li></li>
